--- a/prompt.html
+++ b/prompt.html
@@ -13,6 +13,8 @@
 <body>
     <main class="form-prompts">
 <div>
+    <img class="mb-4" src="./bc.png" alt="" height="150">
+    <p></p>
     <label>Current Prompt</label>
     <p></p>
     <input type="text" id="current_prompt">&nbsp;</input>
