Input boxes are harder to make pretty

--- a/prompt.html
+++ b/prompt.html
@@ -15,7 +15,7 @@
 <div>
     <label>Current Prompt</label>
     <p></p>
-    <input type="text" id="current_prompt">&nbsp;</input>
+    <p type="text" class="current_prompt" id="current_prompt">&nbsp;</p>
 </div>
     </main>
     <script type="text/javascript" src="prompt.js"></script>
