1 stylesheet, mobile friendly

--- a/prompt.html
+++ b/prompt.html
@@ -1,25 +1,23 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="5">
-    <link href="prompt.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="bc_favicon.png">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="refresh" content="5" />
+    <link href="prompt.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="bc_favicon.png" />
     <title>BonoboConnect</title>
-</head>
-<body>
+  </head>
+  <body>
     <main class="form-prompts">
-<div>
-    <img class="mb-4" src="./bc.png" alt="" height="150">
-    <p></p>
-    <label>Current Prompt</label>
-    <p></p>
-    <p type="text" class="current_prompt" id="current_prompt">&nbsp;</p>
-</div>
+      <div>
+        <img class="mb-4" src="./bc.png" alt="" height="150" />
+        <p></p>
+        <h1 class="h3 mb-3 fw-normal">Current Prompt</h1>
+        <p></p>
+        <p type="text" class="current_prompt" id="current_prompt">&nbsp;</p>
+      </div>
     </main>
     <script type="text/javascript" src="prompt.js"></script>
-</body>
+  </body>
 </html>
