responsive sizes of text and icon

--- a/prompt.html
+++ b/prompt.html
@@ -11,7 +11,7 @@
   <body>
     <main class="form-prompts">
       <div>
-        <img class="mb-4" src="./bc.png" alt="" height="150" />
+        <img class="icon" src="./bc.png" alt="" height="150" />
         <p></p>
         <h1 class="h3 mb-3 fw-normal">Current Prompt</h1>
         <p></p>
